# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("@rules_pkl//pkl:defs.bzl", "pkl_eval")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//:poison_cache.bzl", "poisoned_pkl_cache")

poisoned_pkl_cache(
    name = "poisoned_pkl_cache",
    cache = "@mypkl//:packages",
)

pkl_eval(
    name = "pkl_eval_with_poisoned_cache",
    srcs = ["example.pkl"],
    deps = [":poisoned_pkl_cache"],
)

sh_binary(
    name = "poison_cache_script",
    srcs = ["poison_cache_script.sh"],
    visibility = ["//visibility:public"],
)

diff_test(
    name = "pkl_eval_with_poisoned_cache_diff_test",
    file1 = "expected_output.yaml",
    file2 = ":pkl_eval_with_poisoned_cache",
)
