# Copyright © 2024 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
bazel_dep(name = "rules_pkl", version = "1.0")
local_path_override(
    module_name = "rules_pkl",
    path = "../../../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")

bazel_dep(name = "rules_python", version = "0.34.0", dev_dependency = True)

pkl = use_extension("@rules_pkl//pkl/extensions:pkl.bzl", "pkl")
pkl.project(
    name = "mypkl",
    pkl_project = "@//:PklProject",
    pkl_project_deps = "@//:PklProject.deps.json",
)
use_repo(
    pkl,
    "mypkl",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.12",
)
