# Copyright © 2024 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkl//pkl/private:pkl_package.bzl", "pkl_package")

exports_files([
    "PklProject",
    "PklProject.deps.json",
])

pkl_package(
    name = "mypklpackage",
    srcs = [
        "srcs/tortoise.pkl",
    ],
    # --skip-publish-check has been added for the purpose of the tests as it skips the HTTP request normally
    # executed by the pkl project package command. This however means there is no validation as to whether the package
    # has already been published.
    extra_flags = ["--skip-publish-check"],
    project = "@mypklproject//:project",
)

py_test(
    name = "pkl_package_test",
    srcs = ["pkl_package_test.py"],
    data = [
        ":mypklpackage",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)
