# Copyright © 2024 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkl//pkl:defs.bzl", "pkl_package")

exports_files([
    "PklProject",
    "PklProject.deps.json",
])

# A regular project would not have multiple packages for one pkl project but having two packages for one project here
# helps us test different cases.
pkl_package(
    name = "mypklpackage",
    srcs = [
        "srcs/pkg1/tortoise.pkl",
        "//srcs/pkg2:hare_generated_pkl",
    ],
    extra_flags = ["--skip-publish-check"],
    project = "@mypklproject//:project",
)

pkl_package(
    name = "mypklpackage2",
    srcs = [
        "srcs/pkg1/tortoise.pkl",
        "//srcs/pkg2:hare_generated_pkl",
    ],
    extra_flags = ["--skip-publish-check"],
    project = "@mypklproject//:project",
    strip_prefix = "srcs",
)

py_test(
    name = "pkl_package_test_one",
    srcs = ["pkl_package_test_one.py"],
    data = [
        ":mypklpackage",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)

py_test(
    name = "pkl_package_test_two",
    srcs = ["pkl_package_test_two.py"],
    data = [
        ":mypklpackage2",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)
