# Copyright © 2024-2025 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkl//pkl:defs.bzl", "pkl_package")

# A regular project would not have multiple packages for one pkl project but having two packages for one project here
# helps us test different cases.
pkl_package(
    name = "pklpackage_basic",
    srcs = [
        "srcs/pkg1/tortoise.pkl",
        "//srcs/pkg2:hare_generated_pkl",
    ],
    extra_flags = ["--skip-publish-check"],
    project = "@pklproject_basic//:project",
)

pkl_package(
    name = "pklpackage_strip_prefix",
    srcs = [
        "srcs/pkg1/tortoise.pkl",
        "//srcs/pkg2:hare_generated_pkl",
    ],
    extra_flags = ["--skip-publish-check"],
    project = "@pklproject_strip_prefix//:project",
    strip_prefix = "srcs",
)

pkl_package(
    name = "pklpackage_version_override",
    srcs = [
        "srcs/pkg1/tortoise.pkl",
        "//srcs/pkg2:hare_generated_pkl",
    ],
    extra_flags = ["--skip-publish-check"],
    project = "@pklproject_version_override//:project",
    version = "3.0.0",
)

py_test(
    name = "pkl_package_basic_test",
    srcs = ["pkl_package_basic_test.py"],
    data = [
        ":pklpackage_basic",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)

py_test(
    name = "pkl_package_strip_prefix_test",
    srcs = ["pkl_package_strip_prefix_test.py"],
    data = [
        ":pklpackage_strip_prefix",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)

py_test(
    name = "pkl_package_version_override_test",
    srcs = ["pkl_package_version_override_test.py"],
    data = [
        ":pklpackage_version_override",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
    ],
)
