###############################################################################
# Copyright © 2024 Apple Inc. and the Pkl project authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###############################################################################

module(
    name = "rules_pkl_tests_pkl_package",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(
    name = "rules_pkl",
    version = "0.0.0-local-override",
)
local_path_override(
    module_name = "rules_pkl",
    path = "../../../..",
)

pkl = use_extension("@rules_pkl//pkl:extensions.bzl", "pkl")
pkl.project(
    name = "mypklproject",
    pkl_project = "@//:PklProject",
    pkl_project_deps = "@//:PklProject.deps.json",
)
use_repo(
    pkl,
    "mypklproject",
)
